--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,1 +1,29 @@
 // Начните писать стили здесь
+@use "base/fonts.scss";
+@use "base/global.scss";
+@use "base/variables.scss";
+@use "blocks/page.scss";
+@use "blocks/button.scss";
+@use "blocks/main-header.scss";
+@use "blocks/main-nav.scss";
+@use "blocks/logo-header.scss";
+@use "blocks/site-list.scss";
+@use "blocks/main-container.scss";
+@use "blocks/nutrition-program.scss";
+@use "blocks/food-kits.scss";
+@use "blocks/benefit-reasons.scss";
+@use "blocks/reasons-list.scss";
+@use "blocks/nutrition-program-result.scss";
+@use "blocks/stats-list.scss";
+@use "blocks/invitation.scss";
+@use "blocks/main-footer.scss";
+@use "blocks/social.scss";
+@use "blocks/catalog.scss";
+@use "blocks/list-products.scss";
+@use "blocks/characteristics-list.scss";
+@use "blocks/link-all-items.scss";
+@use "blocks/additional-products.scss";
+@use "blocks/list-add-products.scss";
+@use "blocks/promo-gift.scss";
+@use "blocks/program-selection.scss";
+@use "blocks/selection-form.scss";
