--- a/source/sass/base/variables.scss
+++ b/source/sass/base/variables.scss
@@ -8,3 +8,9 @@ $font-alternative-color: #ffffff;
 
 $background-primary-color: #ffffff;
 $background-additional-color: #68b738;
+
+// Viewports
+
+$tablet-width: 768px;
+$desktop-width: 1440px;
+$mobile-width-only: 767px;
