--- a/source/sass/blocks/benefit-reasons.scss
+++ b/source/sass/blocks/benefit-reasons.scss
@@ -1,3 +1,5 @@
+@import "../base/variables";
+
 .benefit-reasons {
   padding-left: 20px;
   padding-right: 20px;
@@ -7,4 +9,20 @@
   font-weight: 400;
   font-size: 36px;
   line-height: 40px;
+}
+
+@media (min-width: $tablet-width) {
+  .benefit-reasons__wrapper {
+    width: 708px;
+    min-height: 782px;
+    margin: 0 auto;
+  }
+}
+
+
+@media (min-width: $desktop-width) {
+  .benefit-reasons__wrapper {
+    width: 1220px;
+    min-height: 280px;
+  }
 }
