--- a/source/sass/blocks/reasons-list.scss
+++ b/source/sass/blocks/reasons-list.scss
@@ -9,3 +9,22 @@
   line-height: 18px;
   color: $font-additional-color;
 }
+
+@media (min-width: $tablet-width) {
+  .reasons-list {
+    display: grid;
+    grid-template-columns: 250px 250px;
+    column-gap: 135px;
+  }
+
+  .reasons-list__item {
+    min-height: 280px;
+  }
+}
+
+
+@media (min-width: $desktop-width) {
+  .reasons-list {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+}
