--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -1,3 +1,5 @@
+@import "../base/variables";
+
 .site-list {
   list-style: none;
   padding: 0;
@@ -8,4 +10,18 @@
 .site-list__link {
   color: inherit;
   text-decoration: none;
+}
+
+@media (min-width: $tablet-width) {
+  .site-list {
+    width: 440px;
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .site-list {
+    width: 478px;
+  }
 }
