--- a/source/sass/blocks/program-selection.scss
+++ b/source/sass/blocks/program-selection.scss
@@ -5,6 +5,10 @@
   padding-right: 20px;
 }
 
+.program-selection__wrapper {
+  min-height: 1300px;
+}
+
 .program-selection__title {
   font-weight: 400;
   font-size: 36px;
@@ -15,4 +19,19 @@
   font-size: 14px;
   line-height: 18px;
   text-transform: uppercase;
+}
+
+@media (min-width: $tablet-width) {
+  .program-selection__wrapper {
+    width: 708px;
+    margin: 0 auto;
+    min-height: 1800px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .program-selection__wrapper {
+    width: 1220px;
+    min-height: 1400px;
+  }
 }
