--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -24,3 +24,5 @@
 @use "blocks/link-all-items.scss";
 @use "blocks/additional-products.scss";
 @use "blocks/list-add-products.scss";
+@use "blocks/program-selection.scss";
+@use "blocks/selection-form.scss";
