Верстка декоративных элементов главной страницы

--- a/source/sass/base/variables.scss
+++ b/source/sass/base/variables.scss
@@ -14,3 +14,4 @@ $background-additional-color: #68b738;
 $tablet-width: 768px;
 $desktop-width: 1440px;
 $mobile-width-only: 767px;
+$destop-width-only: 1439px;
