--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,7 +6,6 @@
 @use "blocks/button.scss";
 @use "blocks/main-header.scss";
 @use "blocks/main-nav.scss";
-@use "blocks/logo-header.scss";
 @use "blocks/site-list.scss";
 @use "blocks/main-container.scss";
 @use "blocks/nutrition-program.scss";
@@ -15,9 +14,12 @@
 @use "blocks/reasons-list.scss";
 @use "blocks/nutrition-program-result.scss";
 @use "blocks/stats-list.scss";
+@use "blocks/slider-result.scss";
 @use "blocks/invitation.scss";
+@use "blocks/map.scss";
 @use "blocks/main-footer.scss";
 @use "blocks/social.scss";
+@use "blocks/copyright.scss";
 @use "blocks/catalog.scss";
 @use "blocks/list-products.scss";
 @use "blocks/characteristics-list.scss";
