--- a/source/sass/blocks/benefit-reasons.scss
+++ b/source/sass/blocks/benefit-reasons.scss
@@ -1,28 +1,47 @@
 @import "../base/variables";
 
 .benefit-reasons {
-  padding-left: 20px;
-  padding-right: 20px;
+  margin-bottom: 43px;
+
+  @media (min-width: $tablet-width) {
+    border-bottom: 1px solid #e6e6e6;
+  }
+
+  @media (min-width: $desktop-width) {
+    border: none;
+  }
+}
+
+.benefit-reasons__wrapper {
+  padding: 0 20px;
+  padding-top: 20px;
+
+  @media (min-width: $tablet-width) {
+    width: 92%;
+    max-width: 1240px;
+    min-height: 782px;
+    margin: 0 auto;
+    margin-bottom: 47px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 1240px;
+    min-height: 280px;
+    padding-top: 46px;
+    padding-right: 0;
+  }
 }
 
 .benefit-reasons__title {
   font-weight: 400;
   font-size: 36px;
   line-height: 40px;
-}
+  margin: 0;
+  margin-bottom: 40px;
 
-@media (min-width: $tablet-width) {
-  .benefit-reasons__wrapper {
-    width: 708px;
-    min-height: 782px;
-    margin: 0 auto;
-  }
-}
-
-
-@media (min-width: $desktop-width) {
-  .benefit-reasons__wrapper {
-    width: 1220px;
-    min-height: 280px;
+  @media (min-width: $tablet-width) {
+    font-size: 60px;
+    line-height: 60px;
+    margin-bottom: 32px;
   }
 }
