--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,12 +1,19 @@
 @import "../base/variables";
 
 .button {
+  display: block;
   font-family: "Oswald", sans-serif;
   font-weight: 400;
-  font-size: 16px;
-  line-height: 20px;
   text-transform: uppercase;
   text-decoration: none;
   color: $font-alternative-color;
   background-color: $background-additional-color;
+
+  &:hover {
+    background-color: #5eaa2f;
+  }
+
+  &:active {
+    color: rgba($color: #ffffff, $alpha: 0.3);
+  }
 }
