--- a/source/sass/blocks/food-kits.scss
+++ b/source/sass/blocks/food-kits.scss
@@ -1,51 +1,145 @@
 @import "../base/variables";
 
-.food-kits {
-  padding-left: 20px;
-  padding-right: 20px;
+.food-kits__wrapper {
+  padding: 0 20px;
+
+  @media (min-width: $tablet-width) {
+    width: 92%;
+    max-width: 1220px;
+    min-height: 772px;
+    margin: 0 auto;
+  }
+
+  @media (min-width: $desktop-width) {
+    min-height: 374px;
+  }
 }
 
 .food-kits__list {
   list-style: none;
   margin: 0;
   padding: 0;
-}
 
-.food-kits__item {
-  background-color: #f2f2f2;
-}
-
-.food-kits__title {
-  font-weight: 400;
-  font-size: 24px;
-  line-height: 37px;
-  text-transform: uppercase;
-}
-
-.food-kits__description {
-  font-family: "Arial", sans-serif;
-  font-size: 14px;
-  line-height: 18px;
-  color: $font-additional-color;
-}
-
-@media (min-width: $tablet-width) {
-  .food-kits__wrapper {
-    width: 708px;
-    min-height: 772px;
-    margin: 0 auto;
-  }
-}
-
-@media (min-width: $desktop-width) {
-  .food-kits__wrapper {
-    width: 1220px;
-    min-height: 374px;
-  }
-
-  .food-kits__list {
+  @media (min-width: $desktop-width) {
     display: grid;
     grid-template-columns: 1fr 1fr;
     column-gap: 80px;
   }
+}
+
+.food-kits__item {
+  padding-top: 30px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 18px;
+  background-color: #f2f2f2;
+  margin-bottom: 20px;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+
+  @media (min-width: $tablet-width) {
+    padding-top: 77px;
+    padding-left: 53px;
+    padding-right: 63px;
+    padding-bottom: 53px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 0;
+    padding-bottom: 55px;
+  }
+}
+
+.food-kits__title {
+  margin: 0;
+  margin-bottom: 30px;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 37px;
+  text-transform: uppercase;
+
+  @media (min-width: $desktop-width) {
+    font-size: 36px;
+    line-height: 36px;
+  }
+}
+
+.food-kits__description {
+  position: relative;
+  margin: 0;
+  margin-bottom: 38px;
+  font-family: "Arial", sans-serif;
+  font-size: 14px;
+  line-height: 18px;
+  color: $font-additional-color;
+
+  &::after {
+    position: absolute;
+    content: "";
+    display: block;
+    bottom: -23px;
+    width: 100%;
+    height: 2px;
+    background-color: #d9d9d9;
+  }
+
+  @media (min-width: $tablet-width) {
+    color: $font-primary-color;
+    font-size: 16px;
+    line-height: 24px;
+
+    &::after {
+      display: none;
+    }
+
+    br {
+      display: none;
+    }
+  }
+}
+
+.food-kits__link {
+  display: inline-block;
+  position: relative;
+  padding-right: 50px;
+  font-size: 16px;
+  line-height: 16px;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: $font-primary-color;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 14px;
+    height: 2px;
+    width: 18px;
+    background-color: $font-primary-color;
+  }
+
+  &:hover .food-kits__link-arrow {
+    right: 0;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 30px;
+  }
+}
+
+.food-kits__link-arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 4px;
+  fill: $font-primary-color;
+  transition: 0.2s;
 }
