--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -6,26 +6,121 @@
   text-transform: uppercase;
 }
 
-.main-nav__logo {
-  height: 65px;
-}
+.main-nav__wrapper {
+  position: relative;
+  padding: 0 20px;
 
-@media (min-width: $tablet-width) {
-  .main-nav__wrapper {
+  @media (min-width: $tablet-width) {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 708px;
+    width: 92%;
+    max-width: 1220px;
     margin: 0 auto;
   }
 
-  .main-nav__toggle {
+  @media (min-width: $desktop-width) {
+    background-color: $background-additional-color;
+  }
+}
+
+.main-nav__inner-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.main-nav__logo {
+  display: flex;
+  min-height: 65px;
+  flex-grow: 2;
+  justify-content: space-between;
+
+  &:hover {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.6;
+  }
+}
+
+.main-nav__logo-image,
+.main-nav__logo-text-image {
+  display: block;
+}
+
+.main-nav__logo-text-image {
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.main-nav__toggle {
+  position: relative;
+  margin-left: auto;
+  z-index: 2;
+  display: block;
+  height: 22px;
+  width: 24px;
+  padding: 5px;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+
+  @media (min-width: $tablet-width) {
     display: none;
   }
 }
 
-@media (min-width: $desktop-width) {
-  .main-nav__wrapper {
-    width: 1220px;
+.main-nav--closed .main-nav__toggle::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  height: 2px;
+  background-color: #000000;
+  box-shadow: 0 8px 0 0 #000000, 0 16px 0 0 #000000;
+}
+
+.main-nav--opened .main-nav__toggle {
+  &::before,
+  &::after {
+    position: absolute;
+    content: "";
+    top: 10px;
+    right: 0;
+    left: 0;
+    height: 2px;
+    background-color: #000000;
+  }
+
+  &::before {
+    transform: rotate(45deg);
+  }
+
+  &::after {
+    transform: rotate(-45deg);
+  }
+}
+
+.main-nav--nojs .main-nav__toogle {
+  display: none;
+}
+
+.main-nav--nojs .main-nav__list {
+  position: static;
+}
+
+.main-nav--opened .main-nav__list {
+  position: absolute;
+  z-index: 10;
+  right: 0;
+  left: 0;
+}
+
+@media (max-width: $mobile-width-only) {
+  .main-nav--closed .main-nav__list {
+    display: none;
   }
 }
