--- a/source/sass/blocks/nutrition-program.scss
+++ b/source/sass/blocks/nutrition-program.scss
@@ -1,44 +1,85 @@
 @import "../base/variables";
 
 .nutrition-program {
-  padding-left: 20px;
-  padding-right: 20px;
   color: $font-alternative-color;
   background-color: $background-additional-color;
+
+  @media (min-width: $tablet-width) {
+    color: $font-primary-color;
+    background-color: $background-primary-color;
+  }
 }
 
 .nutrition-program__wrapper {
   min-height: 480px;
+  padding: 0 20px;
+  padding-top: 26px;
+
+  @media (min-width: $tablet-width) {
+    min-height: 810px;
+    width: 92%;
+    max-width: 1220px;
+    margin: 0 auto;
+    padding-top: 60px;
+  }
+
+  @media (min-width: $desktop-width) {
+    min-height: 554px;
+    padding-top: 110px;
+  }
+}
+
+.nutrition-program__text-wrapper {
+  text-align: center;
+
+  @media (min-width: $tablet-width) {
+    text-align: left;
+    margin-left: 87px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-left: 80px;
+  }
 }
 
 .nutrition-program__title {
   font-size: 36px;
   font-weight: 400;
   line-height: 36px;
+  margin: 0 auto;
+  margin-bottom: 25px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 60px;
+    line-height: 60px;
+    margin-bottom: 40px;
+  }
 }
 
 .nutrition-program__slogan {
   font-size: 14px;
   line-height: 14px;
   text-transform: uppercase;
-}
+  margin: 0;
+  margin-bottom: 30px;
 
-@media (min-width: $tablet-width) {
-  .nutrition-program {
-    color: $font-primary-color;
-    background-color: $background-primary-color;
-  }
-
-  .nutrition-program__wrapper {
-    min-height: 810px;
-    width: 710px;
-    margin: 0 auto;
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 20px;
+    margin-bottom: 50px;
   }
 }
 
-@media (min-width: $desktop-width) {
-  .nutrition-program__wrapper {
-    min-height: 554px;
-    width: 1220px;
+.nutrition-program__button {
+  width: 100%;
+  font-size: 14px;
+  line-height: 18px;
+  padding: 7px 0;
+  outline: white 1px solid;
+
+  @media (min-width: $tablet-width) {
+    display: inline-block;
+    width: auto;
+    padding: 14px 26px;
   }
 }
