--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -4,24 +4,100 @@
   list-style: none;
   padding: 0;
   margin: 0;
+  background-color: $background-primary-color;
 }
 
+.site-list__item {
+  border-bottom: 1px solid #e6e6e6;
+
+  &:first-child {
+    border-top: 1px solid #e6e6e6;
+  }
+}
 
 .site-list__link {
+  display: block;
+  position: relative;
+  padding: 22px 20px;
+  padding-bottom: 24px;
+  text-align: center;
   color: inherit;
+  font-size: 20px;
+  line-height: 20px;
+  font-weight: 500;
+  text-transform: uppercase;
   text-decoration: none;
+
+  &:hover {
+    color: rgba(0, 0, 0, 0.6);
+  }
+
+  &:active {
+    color: rgba(0, 0, 0, 0.3);
+  }
 }
 
 @media (min-width: $tablet-width) {
   .site-list {
-    width: 440px;
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    width: 440px;
+  }
+
+  .site-list__item {
+    margin-right: auto;
+    border: none;
+
+    &:first-child {
+      border: none;
+    }
+  }
+
+  .site-list__item:last-child {
+    margin-right: 0;
+  }
+
+  .site-list__item--active a::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    height: 2px;
+    background-color: #68b738;
+  }
+
+  .site-list__link {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 24px;
+    padding: 0;
+    padding-bottom: 10px;
   }
 }
 
 @media (min-width: $desktop-width) {
   .site-list {
     width: 478px;
+    background-color: transparent;
+  }
+
+  .site-list__link {
+    font-size: 20px;
+    line-height: 30px;
+    color: $font-alternative-color;
+
+    &:hover {
+      color: rgba(255, 255, 255, 0.6);
+    }
+
+    &:active {
+      color: rgba(255, 255, 255, 0.3);
+    }
+  }
+
+  .site-list__item--active a::after {
+    background-color: $font-alternative-color;
   }
 }
