--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,5 +1,30 @@
+@import "../base/variables";
+
 .social {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 132px;
   list-style: none;
   margin: 0;
   padding: 0;
 }
+
+.social__link {
+  display: block;
+  width: 28px;
+  height: 22px;
+
+  .social-image {
+    fill: #666666;
+  }
+
+  &:hover .social-image {
+    fill: #68b738;
+  }
+
+  &:active .social-image {
+    opacity: 0.3;
+  }
+}
+
