Верста декоративных элементов страниц каталога и форма

--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -8,6 +8,7 @@
   text-decoration: none;
   color: $font-alternative-color;
   background-color: $background-additional-color;
+  border: none;
 
   &:hover {
     background-color: #5eaa2f;
