--- a/source/sass/blocks/list-add-products.scss
+++ b/source/sass/blocks/list-add-products.scss
@@ -1,24 +1,145 @@
 @import "../base/variables";
 
 .list-add-products {
+  position: relative;
+  box-sizing: border-box;
   list-style: none;
-  margin: 0;
   padding: 0;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: -13px;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: #cdcdcd;
+  }
+
+  @media (min-width: $tablet-width) {
+    padding: 0 38px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 896px;
+    padding: 0;
+  }
+}
+
+.list-add-products__item {
+  position: relative;
+  margin-bottom: 32px;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: -19px;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: #cdcdcd;
+
+    @media (min-width: $tablet-width) {
+      bottom: -28px;
+    }
+
+    @media (min-width: $desktop-width) {
+      bottom: 0;
+    }
+  }
+
+  @media (min-width: $tablet-width) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    row-gap: 25px;
+    margin-bottom: 54px;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 0;
+    padding-top: 15px;
+    padding-bottom: 17px;
+  }
 }
 
 .list-add-products__title {
+  margin: 0;
+  margin-bottom: 13px;
   font-weight: 400;
   font-size: 16px;
   line-height: 16px;
   color: #222222;
   text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 20px;
+    margin-bottom: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-right: auto;
+  }
+}
+
+.list-add-products__item-wrapper {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 15px;
+
+  @media (min-width: $tablet-width) {
+    justify-content: flex-end;
+    margin-bottom: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: grid;
+    grid-template-columns: 5fr 1fr;
+    width: 288px;
+  }
 }
 
 .list-add-products__product-amount,
 .list-add-products__product-price {
+  margin: 0;
   font-family: "Arial", sans-serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 14px;
   color: $font-additional-color;
+
+  @media (min-width: $tablet-width) {
+    font-size: 16px;
+    line-height: 20px;
+  }
+}
+
+.list-add-products__product-amount {
+  @media (min-width: $tablet-width) {
+    margin-right: 50px;
+  }
+}
+
+.list-add-products__button {
+  padding: 10px 0;
+  width: 100%;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+
+  @media (min-width: $tablet-width) {
+    grid-column: 1 / -1;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 244px;
+    margin-left: 38px;
+  }
 }
