--- a/source/sass/blocks/additional-products.scss
+++ b/source/sass/blocks/additional-products.scss
@@ -1,32 +1,146 @@
 @import "../base/variables";
 
-.additional-products {
+.additional-products__wrapper {
   padding-left: 20px;
   padding-right: 20px;
+  margin-bottom: 35px;
+
+  @media (min-width: $tablet-width) {
+    width: 92%;
+    max-width: 1220px;
+    margin: 0 auto;
+    margin-bottom: 76px;
+    min-height: 820px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 1220px;
+    min-height: 288px;
+    margin-bottom: 86px;
+  }
 }
 
+.additional-products__inner-wrapper {
+  @media (min-width: $desktop-width) {
+    display: flex;
+    justify-content: space-between;
+  }
+}
+
+.additional-products__list {
+  margin: 0;
+  margin-bottom: 54px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 97px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 0;
+  }
+}
+
+
 .additional-products__title {
+  display: inline-block;
+  position: relative;
   font-weight: 400;
   font-size: 24px;
   line-height: 24px;
-}
+  padding-right: 22px;
+  margin: 0;
+  margin-bottom: 49px;
 
-@media (min-width: $tablet-width) {
-  .additional-products__wrapper {
-    width: 708px;
-    margin: 0 auto;
-    min-height: 820px;
+  &::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 100%;
+    width: 1500%;
+    height: 2px;
+    background-color: #68b738;
+  }
+
+  @media (min-width: $tablet-width) {
+    font-size: 36px;
+    line-height: 36px;
+    margin-bottom: 106px;
+    padding-right: 36px;
+    padding-left: 36px;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 50%;
+      right: 100%;
+      width: 1500%;
+      height: 2px;
+      background-color: #68b738;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 81px;
   }
 }
 
-@media (min-width: $desktop-width) {
-  .additional-products__wrapper {
-    width: 1220px;
-    min-height: 288px;
+.promo-gift {
+  position: relative;
+  box-sizing: border-box;
+  text-align: center;
+  min-height: 290px;
+  padding-top: 186px;
+  background-color: #68b738;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 58px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 80px;
+    height: 82px;
+    background-image: url("../../img/icon_gift.svg");
+
+    @media (min-width: $tablet-width) {
+      top: 50%;
+      left: 77px;
+      transform: translateY(-50%) translateX(0);
+    }
+
+    @media (min-width: $desktop-width) {
+      top: 55px;
+      left: 50%;
+      transform: translateX(-50%);
+    }
   }
 
-  .additional-products__inner-wrapper {
+  @media (min-width: $tablet-width) {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 0;
+    padding-right: 124px;
+    min-height: 200px;
+    text-align: left;
+  }
+
+  @media (min-width: $desktop-width) {
+    min-height: 288px;
+    width: 245px;
+    padding: 0;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    text-align: center;
+    padding-bottom: 42px;
+  }
+
+  &__promo-text {
+    font-family: "Arial", sans-serif;
+    font-size: 16px;
+    line-height: 20px;
+    color: #ffffff;
+    margin: 0;
   }
 }
