--- a/source/sass/blocks/list-products.scss
+++ b/source/sass/blocks/list-products.scss
@@ -4,27 +4,63 @@
   list-style: none;
   margin: 0;
   padding: 0;
-}
+  padding-bottom: 25px;
 
-.list-products__product-title {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 20px;
-}
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: -100%;
+    width: 300%;
+    height: 1px;
+    background-color: #ebebeb;
 
-@media (min-width: $tablet-width) {
-  .list-products {
+    @media (min-width: $tablet-width) {
+      display: none;
+    }
+  }
+
+  @media (min-width: $tablet-width) {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 60px;
   }
-}
 
-@media (min-width: $desktop-width) {
-  .list-products {
+  @media (min-width: $desktop-width) {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     column-gap: 80px;
     row-gap: 62px;
+  }
+}
+
+.list-products__item {
+  position: relative;
+  margin-bottom: 19px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 0;
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: -11px;
+    left: -100%;
+    width: 300%;
+    height: 1px;
+    background-color: #ebebeb;
+
+    @media (min-width: $tablet-width) {
+      display: none;
+    }
+  }
+}
+
+.list-products__link-all {
+  margin-top: 36px;
+
+  @media (min-width: $tablet-width) {
+    margin-top: 0;
   }
 }
