Внес исправления по замечениям

--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -10,8 +10,8 @@
     content: "";
     position: absolute;
     top: 0;
-    left: -100%;
-    width: 300%;
+    left: -20px;
+    right: -20px;
     height: 1px;
     background-color: #ebebeb;
 
@@ -45,8 +45,8 @@
     content: "";
     position: absolute;
     bottom: -36px;
-    left: -100%;
-    width: 300%;
+    left: -20px;
+    right: -20px;
     height: 1px;
     background-color: #ebebeb;
 
