--- a/source/sass/blocks/input.scss
+++ b/source/sass/blocks/input.scss
@@ -11,13 +11,13 @@
   color: #444444;
 
   &--email {
-    background-image: url("../../img/icon_email.svg");
+    background-image: url("../img/icon_email.svg");
     background-repeat: no-repeat;
     background-position: right 20px center;
   }
 
   &--phone {
-    background-image: url("../../img/icon_phone.svg");
+    background-image: url("../img/icon_phone.svg");
     background-repeat: no-repeat;
     background-position: right 20px center;
   }
