--- a/source/sass/blocks/list-products.scss
+++ b/source/sass/blocks/list-products.scss
@@ -1,6 +1,7 @@
 @import "../base/variables";
 
 .list-products {
+  position: relative;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -10,8 +11,8 @@
     content: "";
     position: absolute;
     bottom: 0;
-    left: -100%;
-    width: 300%;
+    left: -20px;
+    right: -20px;
     height: 1px;
     background-color: #ebebeb;
 
@@ -46,8 +47,8 @@
     content: "";
     position: absolute;
     bottom: -11px;
-    left: -100%;
-    width: 300%;
+    left: -20px;
+    right: -20px;
     height: 1px;
     background-color: #ebebeb;
 
