--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -20,6 +20,7 @@
 @use "blocks/main-footer.scss";
 @use "blocks/social.scss";
 @use "blocks/main-form.scss";
+@use "blocks/line-title.scss";
 @use "blocks/input.scss";
 @use "blocks/radio-input.scss";
 @use "blocks/comment-input.scss";
