--- a/source/sass/blocks/additional-products.scss
+++ b/source/sass/blocks/additional-products.scss
@@ -42,41 +42,16 @@
 
 
 .additional-products__title {
-  display: inline-block;
-  position: relative;
   font-weight: 400;
   font-size: 24px;
   line-height: 24px;
-  padding-right: 22px;
   margin: 0;
   margin-bottom: 49px;
-
-  &::after {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 100%;
-    width: 1500%;
-    height: 2px;
-    background-color: #68b738;
-  }
 
   @media (min-width: $tablet-width) {
     font-size: 36px;
     line-height: 36px;
     margin-bottom: 106px;
-    padding-right: 36px;
-    padding-left: 36px;
-
-    &::before {
-      content: "";
-      position: absolute;
-      top: 50%;
-      right: 100%;
-      width: 1500%;
-      height: 2px;
-      background-color: #68b738;
-    }
   }
 
   @media (min-width: $desktop-width) {
@@ -100,7 +75,7 @@
     transform: translateX(-50%);
     width: 80px;
     height: 82px;
-    background-image: url("../../img/icon_gift.svg");
+    background-image: url("../img/icon_gift.svg");
 
     @media (min-width: $tablet-width) {
       top: 50%;
