--- a/source/sass/blocks/list-add-products.scss
+++ b/source/sass/blocks/list-add-products.scss
@@ -17,10 +17,6 @@
     background-color: #cdcdcd;
   }
 
-  @media (min-width: $tablet-width) {
-    padding: 0 38px;
-  }
-
   @media (min-width: $desktop-width) {
     width: 896px;
     padding: 0;
@@ -57,6 +53,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     row-gap: 25px;
+    padding: 0 38px;
     margin-bottom: 54px;
   }
 
@@ -65,6 +62,8 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 0;
+    padding-left: 0;
+    padding-right: 0;
     padding-top: 15px;
     padding-bottom: 17px;
   }
