--- a/8/css/style.css
+++ b/8/css/style.css
@@ -1147,29 +1147,47 @@ img {
   display: inline-block;
   position: relative;
   padding-right: 22px;
-  padding-left: 40px;
-  margin-left: -40px;
 }
 @media (min-width: 768px) {
   .line-title {
     padding-right: 40px;
+    padding-left: 40px;
+    margin-left: -40px;
+  }
+  .line-title--add-products {
+    padding-left: 36px;
+    margin-left: 0;
   }
 }
-.line-title::before, .line-title::after {
+@media (min-width: 768px) and (min-width: 1440px) {
+  .line-title--add-products {
+    padding-left: 36px;
+    margin-left: -36px;
+  }
+}
+@media (min-width: 768px) {
+  .line-title::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    right: 100%;
+    width: 100vw;
+    height: 3px;
+    margin-top: 2px;
+    background: #68b738;
+    z-index: -1;
+  }
+}
+.line-title::after {
   content: "";
   position: absolute;
   top: 50%;
+  left: 100%;
   width: 100vw;
   height: 3px;
   margin-top: 2px;
   background: #68b738;
   z-index: -1;
-}
-.line-title::before {
-  left: 100%;
-}
-.line-title::after {
-  right: 100%;
 }
 
 .input {
@@ -1748,7 +1766,6 @@ img {
   font-weight: 400;
   font-size: 24px;
   line-height: 24px;
-  margin: 0;
   margin-bottom: 49px;
 }
 @media (min-width: 768px) {
@@ -1842,11 +1859,6 @@ img {
   height: 1px;
   background-color: #cdcdcd;
 }
-@media (min-width: 768px) {
-  .list-add-products {
-    padding: 0 38px;
-  }
-}
 @media (min-width: 1440px) {
   .list-add-products {
     width: 896px;
@@ -1885,6 +1897,7 @@ img {
     display: grid;
     grid-template-columns: 1fr 1fr;
     row-gap: 25px;
+    padding: 0 38px;
     margin-bottom: 54px;
   }
 }
@@ -1894,6 +1907,8 @@ img {
     justify-content: space-between;
     align-items: center;
     margin-bottom: 0;
+    padding-left: 0;
+    padding-right: 0;
     padding-top: 15px;
     padding-bottom: 17px;
   }
